<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/slide_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/image_alt"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/j__left_ventricle" />

        <TextView
            android:id="@+id/slide_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_image"
            tools:text="Tzeitel" />

        <ImageView
            android:id="@+id/expand_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/expand_for_more_details"
            android:src="@drawable/ic_expand_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_name"
            app:layout_constraintVertical_bias="0.25"
            app:tint="?attr/colorPrimary" />


        <TextView
            android:id="@+id/slide_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_name"
            tools:text="Congestive cardiac failure (CCF), also known as congestive heart failure (CHF) or simply heart failure, refers to the clinical syndrome caused by inherited or acquired abnormalities of heart structure and function, causing a constellation of symptoms and signs that lead to decreased quality and quantity of life." />

        <TextView
            android:id="@+id/read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/text_padding"
            android:text="@string/expand_explanation"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slide_explanation" />

        <Button
            android:id="@+id/reveal_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/reveal_slide_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slide_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
